# cpp-cmake-project-template

./: .gitignore  CMakeLists.txt  Config.cfg  README.md
Scripts/: build_vs22.bat  build_xcode.sh
Source/: Logger.cpp  Logger.h  Main.cpp
Source/GUI/: MainComponent.cpp  MainComponent.h
